MODDATAIMP-1189: Fix update of MARC bibliographic fails with "NullPointerException" (#397)
* MODDATAIMP-1189: Fix update of MARC bibliographic fails with "NullPointerException"